# lightercore

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AGENTS-backup.md  AGENTS-crud.md  AGENTS-db.md  AGENTS-exceptions.md  AGENTS-llm.md  AGENTS-paths.md  AGENTS-permissions.md  AGENTS-prompt-commands.md
src/lightercore/: __init__.py  backup.py  crud.py  db.py  dev_helpers.py  exceptions.py  paths.py  permissions.py  prompt_commands.py  prompt_files.py  system_prompt.py  text_utils.py
src/lightercore/cowrite/: __init__.py  engine.py  style.py
src/lightercore/llm/: __init__.py  base.py  config.py  profiles.py  protocol.py  tool_loop.py  tools.py  utils.py
tests/: test_cowrite_engine.py  test_cowrite_style.py  test_db.py  test_dev_helpers.py  test_llm_base.py  test_llm_config.py  test_llm_profiles.py  test_llm_tools_infra.py  test_llm_utils.py  test_permissions.py  test_prompt_commands.py  test_prompt_files.py  test_system_prompt.py  test_text_utils.py  test_tool_loop.py
web/: .gitignore  package.json  vitest.config.js
web/src/lib/: AccountList.svelte  BannerContainer.svelte  ConfirmDialog.svelte  LlmProfileForm.svelte  ScrollList.svelte  bannerStore.svelte.js  bannerStore.test.js  commandHistory.svelte.js  commandHistory.test.js  conversationUtils.js  conversationUtils.test.js  dirtyFormStore.svelte.js  dirtyFormStore.test.js  highlight.svelte.js  highlight.test.js  historyStore.svelte.js  historyStore.test.js  keyboardShortcuts.svelte.js  keyboardShortcuts.test.js  listSort.svelte.js  listTabFormat.js  listTabFormat.test.js  listTabSelection.svelte.js  (+9 more)
(+6 files in other folders)
